# access-pytorch

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
access_pytorch/: __init__.py  dataset.py  features.py  plots.py  testing.py
access_pytorch/modeling/: predict.py  test.py  train.py
models/: nets.py
notebooks/: 0-introduction.ipynb  1-mnist-data.ipynb  2-mnist-modeling.ipynb  3-regression.ipynb
